# TestTask

./: .gitignore  CMakeLists.txt  README.md
src/: canvas.cpp  canvas.h  constants.h  graph.cpp  graph.h  mainwindow.cpp  mainwindow.h  solver.cpp  solver.h  utils.cpp  utils.h
